// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Premiere Reponse Question Binaire 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
  data-test="item"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
      title="à 15:47"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col flex-grow overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col flex-grow overflow-hidden"
    >
      <div
        className="mb-4"
        data-test="desc"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Déchets
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
        data-test="detail-off"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100"
          />
        </button>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/dechets"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Premiere Reponse Question Choix 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
  data-test="item"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
      title="à 15:47"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col flex-grow overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col flex-grow overflow-hidden"
    >
      <div
        className="mb-4"
        data-test="desc"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Mobilité
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
        data-test="detail-off"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100"
          />
        </button>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/mobilite"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Premiere Reponse Question Proportion 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
  data-test="item"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
      title="à 17:10"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col flex-grow overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col flex-grow overflow-hidden"
    >
      <div
        className="mb-4"
        data-test="desc"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Développement économique
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
        data-test="detail-off"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100"
          />
        </button>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/developpement_economique"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Reponse Question Binaire Modifiee 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
  data-test="item"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
      title="à 15:47"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col flex-grow overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col flex-grow overflow-hidden"
    >
      <div
        className="mb-4"
        data-test="desc"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Déchets
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
        data-test="detail-off"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100"
          />
        </button>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/dechets"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Reponse Question Choix Modifiee 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
  data-test="item"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
      title="à 15:47"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col flex-grow overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col flex-grow overflow-hidden"
    >
      <div
        className="mb-4"
        data-test="desc"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Mobilité
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
        data-test="detail-off"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100"
          />
        </button>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/mobilite"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/reponse/HistoriqueItemReponse Reponse Question Proportion Modifiee 1`] = `
<div
  className="flex flex-col gap-4 md:flex-row md:gap-6"
  data-test="item"
>
  <div
    className="pr-6 w-min md:border-r md:border-gray-200"
  >
    <span
      className="py-1 px-2 text-sm uppercase whitespace-nowrap text-blue-600 bg-blue-100 rounded-md"
      title="à 17:10"
    >
      18 août 2022
    </span>
  </div>
  <div
    className="flex flex-col flex-grow overflow-hidden md:flex-row"
  >
    <div
      className="mr-4 mt-0.5 text-blue-600 fr-fi-information-fill"
    />
    <div
      className="flex flex-col flex-grow overflow-hidden"
    >
      <div
        className="mb-4"
        data-test="desc"
      >
        <p
          className="mb-2 font-bold text-blue-600"
        >
          Caractéristique de la collectivité modifiée
        </p>
        <p
          className="mb-2"
        >
          <span
            className="text-gray-500"
          >
            Par : 
          </span>
          Yolo Dodo
        </p>
        <p
          className="mb-2 last:mb-0"
        >
          <span
            className="text-gray-500"
          >
            Thématique
             : 
          </span>
          Développement économique
        </p>
      </div>
      <div
        className="mb-4 border-t border-b border-gray-200"
        data-test="detail-off"
      >
        <button
          className="flex items-center w-full py-4 px-2"
          onClick={[Function]}
        >
          <div
            className="font-bold"
          >
            Afficher le détail
          </div>
          <div
            className="ml-auto fr-fi-arrow-down-s-line duration-100"
          />
        </button>
      </div>
      <a
        className="flex items-center ml-auto fr-btn fr-btn--secondary !px-4 border border-bf500"
        href="/collectivite/1/personnalisation/developpement_economique"
        onClick={[Function]}
      >
        Voir la page
         
        <span
          className="ml-1 mt-1 fr-fi-arrow-right-line scale-75"
        />
      </a>
    </div>
  </div>
</div>
`;
